@startuml Program
skinparam style strictuml
skinparam monochrome true


interface ASTNode {
    getLine(): int
    getColumn(): int
}

class AbstractASTNode {
    AbstractASTNode(int line, int column)
    getLine(): int
    getColumn(): int
    line: int
    column: int
}

class Program {
    definitions: List<Definition>
}

interface Definition {
    getType(): Type
    getName(): String
}

class AbstractDefinition {
    AbstractDefinition(int line, int column)
}

class VariableDefinition
class FunctionDefinition
class Type

class FunctionType {
    returnType: Type
    parameters: List<VariableDefinition>
}

ASTNode <|.. AbstractASTNode

AbstractASTNode <|-- Program
AbstractASTNode <|-- AbstractDefinition

Definition <|.. AbstractDefinition

Program o-- "0..n" Definition

AbstractDefinition <|-- FunctionDefinition
AbstractDefinition <|-- VariableDefinition

Type <-- Definition
Type <-- FunctionType

FunctionType "1" --o FunctionDefinition

VariableDefinition "1" o-- "1" Type

FunctionDefinition o-- "0..n"  VariableDefinition
FunctionDefinition o-- "0..n"  Statement

FunctionType o-- "0..n" VariableDefinition

@enduml
